Added featured project section

--- a/index.html
+++ b/index.html
@@ -12,8 +12,27 @@
     <!--Header placeholder-->
     <div id="header"></div>
 <main style="min-height:100vh; flex:1;">
-    Homepage content
+    <div class="px-4 py-5 my-5 text-center">
+        <img class="d-block mx-auto mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+        <h1 class="display-5 fw-bold">Centered hero</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">Hellooo</p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+          </div>
+        </div>
+      </div>
+      <section>
+     <div class="container">
+        <h2>Featured projects</h2>
+        <div id="projectsGrid" class="row">
+            
+        </div>
+    </div>
+      </section>
 </main>
+ 
 
 
     <!--Footer placeholder-->
@@ -23,6 +42,7 @@
     <script type="module" src="./scripts/app.js"></script>
     <script type="module" src="./scripts/header.js"></script>
     <script type="module" src="./scripts/footer.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
 
 </body>
 </html>
