--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         </div>
     </div>
       </section>
+      <section>
+        <div class="container">
+           <h2>Latest blogs</h2>
+           <div id="blogsGrid" class="row">
+               
+           </div>
+       </div>
+         </section>
 </main>
  
 
