--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@
     <div id="header"></div>
 <main style="min-height:100vh; flex:1;">
     <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="./assets/viber_slika_2024-08-29_12-56-38-779.jpg" alt="Katarina" width="350" height="400">
+        <img class="d-block mx-auto mb-4" src="./assets/me.jpg" alt="Katarina" width="350" height="400">
         <h1 class="display-5 fw-bold">Katarina Stjepanović</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">Hi there! I'm Katarina, a passionate web developer and high school student with a flair for creating innovative digital solutions. I specialize in designing and developing engaging websites that not only look great but also deliver exceptional user experiences. <br>
-
-            In addition to my work as a web developer, I am also the proud owner of an online business where I channel my creativity and entrepreneurial spirit into providing valuable services and products. Balancing my studies with my professional interests, I am committed to continuous learning and growth in the ever-evolving tech landscape. <br>
-            
-            When I'm not coding or managing my business, you can find me exploring new tech trends, working on personal projects, or enjoying reading books and swimming. I'm always excited to connect with like-minded individuals and explore new opportunities.</p>
+          <p class="lead mb-4">Web developer, Student, Business owner</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <button type="button" class="btn btn-primary btn-lg px-4 gap-3"><a href="mailto:katarina22april@gmail.com" style="color: white; text-decoration: none;">Contact me</a></button>
           </div>
